Fixed gitignore symlink problem
When I replaced the networks folder with a symlink to a shared networks folder, git started trying to track the networks folder, because it considers symlinks to be files, not folders.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 /__pycache__/
 # Ignore log files:
 /logs/
-# Ignore neural networks
+# Ignore neural network folder
 /networks/
+# ...even if it's a symlink
+/networks
 # Ignore private files
 /private/
 # Ignore specific files:
