--- a/SegmentationServer_Requirements.yml
+++ b/SegmentationServer_Requirements.yml
@@ -1,87 +1,81 @@
 name: segServer
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - _tflow_select=2.3.0=mkl
-  - absl-py=0.9.0=py37hc8dfbb8_1
-  - asn1crypto=1.3.0=py37_0
-  - astor=0.7.1=py_0
+  - _tflow_select=2.1.0=gpu
+  - absl-py=0.15.0=pyhd3eb1b0_0
+  - astor=0.8.1=py37haa95532_0
   - blas=1.0=mkl
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py37_1
-  - cffi=1.14.0=py37h7a1dbc1_0
-  - chardet=3.0.4=py37_1003
-  - cryptography=2.8=py37h7a1dbc1_0
-  - gast=0.3.3=py_0
-  - grpcio=1.23.0=py37h3f65fb1_1
+  - brotlipy=0.7.0=py37h2bbff1b_1003
+  - ca-certificates=2021.10.26=haa95532_4
+  - cached-property=1.5.2=py_0
+  - certifi=2021.10.8=py37haa95532_2
+  - cffi=1.15.0=py37h2bbff1b_1
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cryptography=36.0.0=py37h21b164f_0
+  - cudatoolkit=10.0.130=0
+  - cudnn=7.6.5=cuda10.0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
+  - gast=0.5.3=pyhd3eb1b0_0
+  - grpcio=1.42.0=py37hc60d5dd_0
   - h5py=2.8.0=py37hf7173ca_2
   - hdf5=1.8.20=hac2f561_1
   - icc_rt=2019.0.0=h0cc432a_1
-  - idna=2.9=py_1
-  - intel-openmp=2019.4=245
-  - jpeg=9b=hb83a4c4_2
-  - keras=2.3.1=0
+  - idna=3.3=pyhd3eb1b0_0
+  - importlib-metadata=4.8.2=py37haa95532_0
+  - intel-openmp=2021.4.0=haa95532_3556
+  - jpeg=9d=h2bbff1b_0
   - keras-applications=1.0.8=py_1
-  - keras-base=2.3.1=py37_0
-  - keras-preprocessing=1.1.0=py_0
-  - libblas=3.8.0=14_mkl
-  - libcblas=3.8.0=14_mkl
-  - liblapack=3.8.0=14_mkl
-  - libmklml=2019.0.5=0
+  - keras-preprocessing=1.1.2=pyhd3eb1b0_0
   - libopencv=3.4.2=h20b85fd_0
   - libpng=1.6.37=h2a8f88b_0
-  - libprotobuf=3.11.4=h1a1b453_0
-  - libtiff=4.1.0=h56a325e_0
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markdown=3.2.1=py_0
-  - mkl=2019.4=245
-  - mkl-service=2.3.0=py37hfa6e2cd_0
-  - msys2-conda-epoch=20160418=1
-  - numpy=1.18.1=py37h90d3380_1
+  - libprotobuf=3.19.1=h23ce68f_0
+  - libtiff=4.2.0=hd0e1b90_0
+  - lz4-c=1.9.3=h2bbff1b_1
+  - markdown=3.3.4=py37haa95532_0
+  - mkl=2021.4.0=haa95532_640
+  - mkl-service=2.4.0=py37h2bbff1b_0
+  - mkl_fft=1.3.1=py37h277e83a_0
+  - mkl_random=1.2.2=py37hf11a4ad_0
+  - numpy=1.21.5=py37ha4e8547_0
+  - numpy-base=1.21.5=py37hc2deb75_0
   - opencv=3.4.2=py37h40b0b35_0
-  - openssl=1.1.1f=he774522_0
-  - pip=20.0.2=py_2
-  - protobuf=3.11.4=py37h5fe3f0a_1
+  - openssl=1.1.1m=h2bbff1b_0
+  - pip=21.2.4=py37haa95532_0
+  - protobuf=3.19.1=py37hd77b12b_0
   - py-opencv=3.4.2=py37hc319ecb_0
-  - pycparser=2.20=py_0
-  - pyopenssl=19.1.0=py37_0
-  - pyreadline=2.1=py37_1001
-  - pysocks=1.7.1=py37_0
-  - python=3.7.6=h60c2a47_5_cpython
-  - python_abi=3.7=1_cp37m
-  - pywin32=227=py37he774522_1
-  - pyyaml=5.3.1=py37he774522_0
-  - requests=2.23.0=py37_0
-  - scipy=1.3.1=py37h29ff71c_0
-  - setuptools=46.1.3=py37hc8dfbb8_0
-  - six=1.14.0=py_1
-  - sqlite=3.30.1=hfa6e2cd_0
-  - tensorboard=1.14.0=py37_0
-  - tensorflow=1.14.0=mkl_py37h7908ca0_0
-  - tensorflow-base=1.14.0=mkl_py37ha978198_0
-  - tensorflow-estimator=1.14.0=py37h5ca1d4c_0
-  - termcolor=1.1.0=py_2
-  - urllib3=1.25.8=py37_0
-  - vc=14.1=h869be7e_1
-  - vs2015_runtime=14.16.27012=h30e32a0_1
-  - waitress=1.3.1=py_0
-  - werkzeug=1.0.1=pyh9f0ad1d_0
-  - wheel=0.34.2=py_1
-  - win_inet_pton=1.1.0=py37_0
-  - wincertstore=0.2=py37_1003
-  - wrapt=1.12.1=py37h8055547_1
-  - xz=5.2.4=h2fa13f4_4
-  - yaml=0.1.7=hc54c509_2
-  - zlib=1.2.11=h2fa13f4_1006
-  - zstd=1.3.7=h508b16e_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyreadline=2.1=py37_1
+  - pysocks=1.7.1=py37_1
+  - python=3.7.11=h6244533_0
+  - pywin32=302=py37h827c3e9_1
+  - requests=2.27.1=pyhd3eb1b0_0
+  - scipy=1.7.3=py37h0a974cb_0
+  - setuptools=58.0.4=py37haa95532_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sqlite=3.37.2=h2bbff1b_0
+  - tensorboard=1.14.0=py37he3c9ec2_0
+  - tensorflow=1.14.0=gpu_py37h5512b17_0
+  - tensorflow-base=1.14.0=gpu_py37h55fc52a_0
+  - tensorflow-estimator=1.14.0=py_0
+  - tensorflow-gpu=1.14.0=h0d30ee6_0
+  - termcolor=1.1.0=py37haa95532_1
+  - typing_extensions=3.10.0.2=pyh06a4308_0
+  - urllib3=1.26.8=pyhd3eb1b0_0
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - waitress=2.0.0=pyhd3eb1b0_0
+  - werkzeug=2.0.2=pyhd3eb1b0_0
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - win_inet_pton=1.1.0=py37haa95532_0
+  - wincertstore=0.2=py37haa95532_2
+  - wrapt=1.13.3=py37h2bbff1b_2
+  - xz=5.2.5=h62dcd97_0
+  - zipp=3.7.0=pyhd3eb1b0_0
+  - zlib=1.2.11=h8cc25b3_4
+  - zstd=1.4.9=h19a0ad4_0
   - pip:
     - array2gif==1.0.4
-    - webob==1.8.6
+    - webob==1.8.7
     - wsgi-basic-auth==1.1.0
-prefix: C:\Users\Goldberg\Anaconda3\envs\segServer
-
